# danmu-app

./: README.md  index.html  package.json  vite.config.ts
.github/workflows/: release.yml
src/: App.vue  main.ts  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/examples/: test_clipboard_win.rs  testimage.rs  testimageclipboard2.rs
src-tauri/src/: chrome.rs  commands.rs  lib.rs  main.rs
src/assets/js/: biliApi.js  db.js  sqlite.ts
src/components/: Greet.vue  Window.vue
src/router/: index.ts
src/views/: SetChatterBox.vue  SettingReply.vue  autoreply.vue  chatgtp.vue  danmu.vue  danmuQuery.vue  subtitles.vue
