[package]
name = "danmu-app"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.57"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.2", features = ["api-all"] }
tauri-plugin-positioner = "1.0"
base64 = "0.21.0"
aes-gcm = "0.10.1"
rusqlite = { version = "0.28.0", features = ["bundled"] }
thiserror = "1.0"

[dependencies.windows]
version = "0.44.0"
features = [
    "Data_Xml_Dom",
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_Threading",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Security_Cryptography",
    "Foundation",
    "Storage_Streams",
    "Security_Cryptography_DataProtection",
    "Win32_System_WinRT",
    "Win32_System_Services",
    "Win32_System_Memory_NonVolatile",
]


[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]
